# ldaca-tabulator

./: .gitignore  README.md  TODO.md  cooee.ipynb  example.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  run-tests.yml
config/: config-ids.json  config.json  cooee-config.json  ignore_prop.json
configs/: config-ids.json
configs/corpora/: ICEAUS-config.json  LaTrobe-config.json  config.json  cooee-config.json
configs/general/: cooee-config.json  general-config.json
docs/: tabulator.md
ldacatabulator/: tabulator.py
src/: cooee.ipynb  loader.py  tabulator.py  utils.py
src/ldaca_loader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ldacatabulator/: tabulator.py
tests/: test_LDaCATabulator.py  test_utils.py
