[project]
name = "ldaca-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
[project.license-files]
paths = ["LICENSE.txt"]
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "polar>=0.0.127",
    "pytest-localserver>=0.9.0.post0",
    "requests>=2.32.5",
    "rocrate-tabular",
    "tqdm>=4.67.1",
]



[tool.uv.sources]
rocrate-tabular = { git = "https://github.com/Sydney-Informatics-Hub/rocrate-tabular.git" }
