[project]
name = "ldaca-loader"
version = "0.1.0"
authors = [
    { name = "Atiq Ur Rehman", email = "atiqur.rehman@sydney.edu.au" },
]
description = "LDaCA-specific interface to Tabulator"
readme = "README.md"
license = "MIT"
[project.license-files]
paths = ["LICENSE.txt"]
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-localserver>=0.9.0.post0",
    "requests>=2.32.5",
    "rocrate-tabular",
]



[tool.uv.sources]
rocrate-tabular = { git = "https://github.com/Sydney-Informatics-Hub/rocrate-tabular.git" }

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
]
